[gd_scene load_steps=13 format=3 uid="uid://ybwynx8lkdr5"]

[ext_resource type="Texture2D" uid="uid://maokcyd0gft3" path="res://test-image.svg" id="1_baobv"]
[ext_resource type="Texture2D" uid="uid://b6iy3oi2bo457" path="res://ASSETS/BATTLE ASSETS/TestBG.jpg" id="1_onmo0"]
[ext_resource type="Script" path="res://BATTLE/battle.gd" id="1_p7l2w"]
[ext_resource type="Resource" uid="uid://def1s1halrdxp" path="res://ENEMY/Level_Resources/test_enemy.tres" id="2_fyjj2"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3ojeh"]
bg_color = Color(0.907942, 0.907942, 0.907942, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xx2mg"]
bg_color = Color(0, 0.91, 0.439833, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_nnucm"]
bg_color = Color(1, 1, 1, 0.670588)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_sgdvl"]
bg_color = Color(1, 1, 1, 0.866667)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rpa36"]
bg_color = Color(0.258, 0.86, 0.7998, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_b44uv"]
bg_color = Color(0.258824, 0.858824, 0.8, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qa5nm"]
bg_color = Color(0, 0.68, 0.612, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_n2mt1"]
bg_color = Color(1, 1, 1, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0.0509804, 0.4, 0.168627, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[node name="Battle" type="Node2D"]
script = ExtResource("1_p7l2w")
enemy = ExtResource("2_fyjj2")

[node name="Background" type="TextureRect" parent="."]
offset_right = 960.0
offset_bottom = 540.0
texture = ExtResource("1_onmo0")
expand_mode = 1

[node name="EnemyHealthBar" type="ProgressBar" parent="."]
offset_left = 324.0
offset_top = 58.0
offset_right = 631.0
offset_bottom = 68.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_styles/background = SubResource("StyleBoxFlat_3ojeh")
theme_override_styles/fill = SubResource("StyleBoxFlat_xx2mg")
max_value = 50.0
value = 50.0
show_percentage = false

[node name="Enemy" type="TextureRect" parent="."]
offset_left = 411.0
offset_top = 76.0
offset_right = 539.0
offset_bottom = 204.0
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("1_baobv")

[node name="PlayerPanel" type="Panel" parent="."]
offset_left = -5.0
offset_top = 477.0
offset_right = 967.0
offset_bottom = 546.0
theme_override_styles/panel = SubResource("StyleBoxFlat_nnucm")

[node name="Label" type="Label" parent="PlayerPanel"]
layout_mode = 2
offset_left = 152.0
offset_top = 7.0
offset_right = 284.0
offset_bottom = 57.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 35
text = "PLAYER"

[node name="PlayerHealthBar" type="ProgressBar" parent="PlayerPanel"]
layout_mode = 0
offset_left = 387.0
offset_top = 14.0
offset_right = 899.0
offset_bottom = 51.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_styles/background = SubResource("StyleBoxFlat_3ojeh")
theme_override_styles/fill = SubResource("StyleBoxFlat_xx2mg")
value = 50.0
show_percentage = false

[node name="ActionsPanel" type="Panel" parent="."]
offset_left = -5.0
offset_top = 408.0
offset_right = 967.0
offset_bottom = 477.0
theme_override_styles/panel = SubResource("StyleBoxFlat_sgdvl")

[node name="Run" type="Button" parent="ActionsPanel"]
layout_mode = 0
offset_left = 657.0
offset_top = 16.0
offset_right = 903.0
offset_bottom = 60.0
theme_override_font_sizes/font_size = 25
theme_override_styles/hover = SubResource("StyleBoxFlat_rpa36")
theme_override_styles/pressed = SubResource("StyleBoxFlat_b44uv")
theme_override_styles/normal = SubResource("StyleBoxFlat_qa5nm")
text = "RUN"

[node name="Heal" type="Button" parent="ActionsPanel"]
layout_mode = 0
offset_left = 365.0
offset_top = 16.0
offset_right = 611.0
offset_bottom = 60.0
theme_override_font_sizes/font_size = 25
theme_override_styles/hover = SubResource("StyleBoxFlat_rpa36")
theme_override_styles/pressed = SubResource("StyleBoxFlat_b44uv")
theme_override_styles/normal = SubResource("StyleBoxFlat_qa5nm")
text = "HEAL"

[node name="Attack" type="Button" parent="ActionsPanel"]
layout_mode = 0
offset_left = 69.0
offset_top = 16.0
offset_right = 315.0
offset_bottom = 60.0
theme_override_font_sizes/font_size = 25
theme_override_styles/hover = SubResource("StyleBoxFlat_rpa36")
theme_override_styles/pressed = SubResource("StyleBoxFlat_b44uv")
theme_override_styles/normal = SubResource("StyleBoxFlat_qa5nm")
text = "ATTACK"

[node name="Textbox" type="Panel" parent="."]
offset_left = 135.0
offset_top = 300.0
offset_right = 821.0
offset_bottom = 371.0
theme_override_styles/panel = SubResource("StyleBoxFlat_n2mt1")

[node name="Label" type="Label" parent="Textbox"]
layout_mode = 0
offset_left = 16.0
offset_top = 22.0
offset_right = 211.0
offset_bottom = 48.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 18
text = "THIS IS A BATTLE TEST!"

[node name="Ticker" type="Label" parent="Textbox"]
layout_mode = 0
offset_left = 662.0
offset_top = 35.0
offset_right = 676.0
offset_bottom = 70.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 25
text = ">"

[connection signal="pressed" from="ActionsPanel/Run" to="." method="_on_run_pressed"]
[connection signal="pressed" from="ActionsPanel/Heal" to="." method="_on_heal_pressed"]
[connection signal="pressed" from="ActionsPanel/Attack" to="." method="_on_attack_pressed"]
